# osg_junk

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  README.md
examples/01_HelloCone/: 01_HelloCone.cpp  CMakeLists.txt
examples/02_HelloConeQt/: 02_HelloConeQt.cpp  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  viewerwidget.cpp  viewerwidget.h
examples/03_HelloBezier/: 03_HelloBezier.cpp  CMakeLists.txt  terrain_coords.h
